WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30798
REGRESSION (
r48687
): www.myuhc.com appears blank.
https://bugs.webkit.org/show_bug.cgi?id=30798
Summary
REGRESSION (r48687): www.myuhc.com appears blank.
Brady Eidson
Reported
2009-10-26 16:53:39 PDT
Pages with frames nested more than 1 level deep from the main frame that also have redirects at those deep frames were broken by
r48687
. This is because child frames now care that *ALL* of their ancestors have finished loading, instead of just their direct parents. But frames don't tell all of their descendants they finished, only their direct children. The fix is to have frames tell all of their descendants when they finish loading.
Attachments
Notify all descendants, not just child frames.
(
deleted
)
2009-10-26 17:12 PDT
,
Brady Eidson
darin
: review+
beidson
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2009-10-26 17:12:28 PDT
Created
attachment 41916
[details]
Notify all descendants, not just child frames.
Darin Adler
Comment 2
2009-10-26 17:15:38 PDT
Comment on
attachment 41916
[details]
Notify all descendants, not just child frames. I would like the test better if it documented success better. The most helpful text in the test is in meta-redirect-to-notify-done.html and that text does not display. In the grandparent it would be good to say a word or two about what a successful result looks like.
Brady Eidson
Comment 3
2009-10-26 17:20:12 PDT
Committed
r50116
.
http://trac.webkit.org/changeset/50116
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug