<rdar://problem/7289467> and http://webkit.org/b/30798 - REGRESSION (r48687): www.myuhc.com doesn't load.

Reviewed by Darin Adler.

WebCore:

Test: fast/loader/grandparent-completion-starts-redirect.html

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::completed): Notify all descendants that the load completed, not just direct children.

LayoutTests:

* fast/loader/grandparent-completion-starts-redirect-expected.txt: Added.
* fast/loader/grandparent-completion-starts-redirect.html: Added.
* fast/loader/resources/meta-redirect-to-notify-done.html: Added.
* fast/loader/resources/parent-of-redirect.html: Added.



Canonical link: https://commits.webkit.org/41562@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50116 268f45cc-cd09-0410-ab3c-d52691b4dbfc